# concat-fuse

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  DEVELOP.md  Makefile  README.md  cfconcat.py  concat.c  concat.cpp  concat_fuse.cpp  flake.nix  guix.scm  multi_file.cpp  multi_file.hpp  util.hpp  vcat  vcat.py  wscript
doc/: Makefile  cfconcat.1  cfconcat.xml  concat-fuse.1  concat-fuse.xml  vcat.1  vcat.xml
src/: concat_fuse.cpp  concat_fuse.hpp  concat_pattern.cpp  concat_vfs.cpp  concat_vfs.hpp  control_file.cpp  control_file.hpp  directory.cpp  directory.hpp  entry.hpp  file.hpp  file_list.hpp  format.hpp  glob_file_list.cpp  glob_file_list.hpp  handle_store.hpp  main.cpp  multi_file.cpp  multi_file.hpp  multi_file_stream.cpp  multi_file_stream.hpp  simple_directory.cpp  simple_directory.hpp  simple_file.cpp  simple_file.hpp  simple_file_list.cpp  simple_file_list.hpp  simple_file_stream.cpp  simple_file_stream.hpp  stream.hpp  util.cpp  util.hpp  zip_data.cpp  zip_data.hpp  zip_file.cpp  zip_file.hpp  zip_file_stream.cpp  zip_file_stream.hpp  zip_stream.cpp  zip_stream.hpp
tests/: concat_vfs_test.cpp  directory_test.cpp  file_test.cpp  format_test.cpp  multi_file_test.cpp  util_test.cpp
